feat(react-wc): Integrate chat-demo css vars in App.css

--- a/demo-chat/react-wc/src/App.css
+++ b/demo-chat/react-wc/src/App.css
@@ -1,3 +1,11 @@
+:root {
+  --main-color: #282c34;
+  --primary-color: #61dafb;
+  --primary-color-darken-10: #48c1e2;
+  --primary-color-darken-20: #48c1e2;
+  --white-color: #fff;
+}
+
 .App {
   display: flex;
 }
@@ -21,6 +29,18 @@
 }
 
 chat-demo {
+  --lobby-background: var(--main-color);
+  --lobby-button-background: var(--primary-color);
+  --lobby-button-hover-background: var(--primary-color-darken-10);
+
+  --room-background: var(--main-color);
+  --room-button-background: var(--primary-color);
+  --room-button-hover-background: var(--primary-color-darken-10);
+
+  --message-badge-background: var(--primary-color);
+  --message-color: var(--white-color);
+  --message-name-color: var(--primary-color-darken-20);
+
   flex: 1;
   height: 100vh;
 }
